--- a/seeds/projectData.json
+++ b/seeds/projectData.json
@@ -1,16 +1,16 @@
 [
   {
-    "name": "Music Near Me",
+    "project_name": "Music Near Me",
     "description": "A mobile app that will send you notifications whenever a concert is playing in your area.",
     "content": "asdfsadfsadfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdef"
   },
   {
-    "name": "The Ultimate Tech Quiz",
+    "project_name": "The Ultimate Tech Quiz",
     "description": "A web app that will give users 10 new technical questions each day and track their progress in things like programming, cybersecurity, database architecture, and more!",
     "content": "asdfsadfsadfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdef"
   },
   {
-    "name": "Roll 'Em Up",
+    "project_name": "Roll 'Em Up",
     "description": "A game for Windows and macOS where players move a ball through a series of increasingly challenging mazes.",
     "content": "asdfsadfsadfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdef"
   }
