--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 		"express": "^4.18.1",
 		"express-handlebars": "^5.2.0",
 		"express-session": "^1.17.1",
+		"multer": "^1.4.5-lts.1",
 		"mysql2": "^2.2.5",
 		"nodemon": "^2.0.19",
-		"sequelize": "^6.3.5"
+		"sequelize": "^6.3.5",
+		"sharp": "^0.31.0"
 	},
 	"devDependencies": {
 		"eslint": "^7.12.1",
